<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axis6</name>
  <version>0.0.0</version>
  <description>Control 6-axis robot with pca9685 (motor: MG996R)</description>
  <maintainer email="how2soft@gmail.com">how2flow</maintainer>
  <license>Apache 2.0, The MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>how2flow_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
